# ArroyoXPS

./: .dockerignore  .env.example  .gitignore  .gitmodules  AP-XPS.code-workspace  Dockerfile  Dockerfile_frontend  Dockerfile_labviewsim  Dockerfile_processor  Dockerfile_wspublisher  Explore_data_write_zarr.ipynb  LICENSE  New_convert.py  README.md  docker-compose-simulator.yaml  docker-compose-simulator.yml  docker-compose.yml  frame_utils.py  pyproject.toml  settings.yaml  settings_container.yaml  tiled_test.py
.github/workflows/: python-app.yml
app/: app_layout.py
docs/: design.md  dictionary.md  system_components.md  user_strories.md
examples/: example_peak_detection_plot.ipynb  examples_plots.ipynb  h5view.ipynb  pickle.ipynb  requirements.txt  sample_scan.ipynb  tiled.ipynb  view_frame.ipynb
examples/legacy_convert/: New_convert.py  frame_utils.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js
frontend/src/assets/: icons.js  sampleRawArray.js
frontend/src/component_library/: FormInputEnum.jsx  FormInputFloat.jsx  FormInputInteger.jsx  FormInputString.jsx  FormRow.jsx
frontend/src/components/: ConsoleViewer.jsx  D3HeatmapCanvas.jsx  D3HeatmapCanvasTest.jsx  D3HeatmapSVG.jsx  Header.jsx  Main.jsx  PixiHeatmap.jsx  PixiHeatmapTexture.jsx  PlotlyHeatMap.jsx  PlotlyHeatMapBySlice.jsx  PlotlyScatterMultiple.jsx  PlotlyScatterSingle.jsx  ScanMetadata.jsx  Settings.jsx  Sidebar.jsx  SidebarItem.jsx  Snapshot.jsx  Status.jsx  ThreeJSHeatmap.jsx  Widget.jsx
frontend/src/hooks/: useAPXPS.js
frontend/src/utils/: connectionHelper.js
sample_data/pickled_scan/: 0.backup  1.pickle  10.pickle  12.pickle  14.pickle  16.pickle  18.pickle  19.pickle  2.pickle  21.pickle  23.pickle  24.pickle  25.pickle  26.pickle  4.pickle  5.pickle  6.pickle  7.pickle  8.pickle  9.pickle
sample_data/scan1/: 11.pickle  13.pickle  15.pickle  17.pickle  20.pickle  22.pickle
services/tiled/deploy/config/: config.yml
src/: calculate.py  calculated_item.py  fft_calculating.py  peak-fitting.py  peak_fitting.py
src/_tests/: labview_messages.py  test_array_300_1131.npy  test_calculate.py  test_integration.py  test_listener.py  test_processor.py  test_raw_frame_269_1131.npy  test_tiled.py  test_writer.py
src/apxps/pipelines/ccd/: __init__.py  trs.py  (+1 more)
src/tr_ap_xps/: app.py  beamline_events.py  calculate.py  calculated_item.py  cli.py  config.py  fft.py  labview.py  labview_listener.py  listener.py  log.py  log_utils.py  model.py  operator.py  peak_fitting.py  processor.py  publisher.py  result_listener.py  result_publisher.py  result_zmq_subscriber.py  schemas.py  server.py  shared_queue.py  simulator.py  tiled.py  timing.py  websockets.py  writer.py  zmq_publisher.py  zmq_recorder.py
src/tr_ap_xps/api/: server.py  zmq_subscriber.py
src/tr_ap_xps/apps/: processor_cli.py
src/tr_ap_xps/listen/: labview_listener.py
src/tr_ap_xps/listeners/: labview_listener.py  ws_listener.py
src/tr_ap_xps/operators/: xps_operator.py
src/tr_ap_xps/pipeline/: fft.py  peak_fitting.py  xps_operator.py  xps_processor.py
src/tr_ap_xps/process/: operator.py  processor.py
src/tr_ap_xps/processor/: cli.py  lv_listener.py  processor.py  result_publisher.py  shared_queue.py
src/tr_ap_xps/publish/: websocket_publisher.py  ws_server.py  zmq_publisher.py
src/tr_ap_xps/publisher/: result_subscriber.py  ws_server.py
src/tr_ap_xps/publishers/: tiled_result_publisher.py  ws_result_publisher.py
src/tr_ap_xps/simulation/: simulator.py  zmq_recorder.py
src/tr_ap_xps/simulator/: h5_simulator.py  simulator.py  zmq_recorder.py
(+16 files in other folders)
