[project]
name = "tr-ap-xps"
version = "0.0.1"
authors = [
    { name="Dylan McReynolds", email="dmcreynolds@lbl.gov"},
]
description = "a package to perform computations and suggestion during a time-resolved AP-XPS experiment"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    # "arroyo",
    "astropy",
    "dynaconf",
    "python-dotenv",
    "pandas",
    "msgpack",
    "numpy",
    "Pillow",
    "pyzmq",
    "tiled[client] @ git+https://github.com/bluesky/tiled.git",
    "tqdm",
    "typer",
    "websockets",
    "zarr",
    "scipy",
]

[project.optional-dependencies]
# These are required for developing the package (running the tests, building
# the documentation) but not necessarily required for _using_ it.
dev = [
    "flake8",
    "pre-commit",
    "pytest-asyncio",
    "pytest-mock",
    "tiled[server]",
]

notebook = [
    "jupyterlab",
    "matplotlib",
    "python-dotenv"
]

simulator = [
    "h5py"
]

[project.urls]
Homepage = "https://github.com/als-computing/AP-XPS"
Issues = "https://github.com/als-computing/AP-XPS/issues"


[tool.isort]

profile = "black"
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
